--- a/WindowsServerDocs/index.yml
+++ b/WindowsServerDocs/index.yml
@@ -10,7 +10,7 @@ metadata:
   manager: femila
   ms.service: windows-server
   ms.topic: hub-page
-  ms.date: 08/13/2021
+  ms.date: 08/19/2021
   ms.author: jgerend
 
 highlightedContent:
@@ -30,15 +30,15 @@ highlightedContent:
     - title: Connect to Azure hybrid services
       itemType: how-to-guide
       url: ./manage/windows-admin-center/azure/index.md
-    - title: Get started with Windows Server 2019
-      itemType: get-started
-      url: ./get-started-19/get-started-19.md
     - title: Use Windows Server 2008 and 2008 R2 Extended Security Updates
       itemType: how-to-guide
       url: ./get-started/extended-security-updates-overview.md
     - title: Windows Insider Program for Windows Server
       itemType: get-started
       url: /windows-insider/business/server-get-started
+    - title: Azure Automanage for Windows Server Services
+      itemType: get-started
+      url: /azure/automanage/automanage-windows-server-services-overview
 
 conceptualContent:
   items:
