--- a/WindowsServerDocs/storage/storage-replica/storage-replica-frequently-asked-questions.yml
+++ b/WindowsServerDocs/storage/storage-replica/storage-replica-frequently-asked-questions.yml
@@ -4,10 +4,11 @@ metadata:
   title: Frequently asked questions about Storage Replica
   manager: siroy
   ms.author: nedpyle
-  ms.topic: how-to
+  ms.topic: article
   author: nedpyle
   ms.date: 04/15/2020
   ms.assetid: 12bc8e11-d63c-4aef-8129-f92324b2bf1b
+  ms.prod: windows-server
     
 title: Frequently asked questions about Storage Replica
 summary: |
