--- a/WindowsServerDocs/administration/manage-windows-server.yml
+++ b/WindowsServerDocs/administration/manage-windows-server.yml
@@ -10,6 +10,7 @@ metadata:
   author: lizap
   ms.author: elizapo
   ms.date: 06/09/2020
+  ms.prod: windows-server
 
 # linkListType: architecture | concept | deploy | download | get-started | how-to-guide | learn | overview | quickstart | reference | sample | tutorial | video | whats-new
 
