--- a/WindowsServerDocs/manage/windows-admin-center/understand/faq.yml
+++ b/WindowsServerDocs/manage/windows-admin-center/understand/faq.yml
@@ -7,6 +7,7 @@ metadata:
   ms.author: niwashbu
   ms.localizationpriority: medium
   ms.date: 12/02/2019
+  ms.prod: windows-server
     
 title: Windows Admin Center frequently asked questions
 summary: |
