--- a/WindowsServerDocs/networking/index.yml
+++ b/WindowsServerDocs/networking/index.yml
@@ -15,6 +15,7 @@ metadata:
   ms.date: 06/11/2020 #Required; mm/dd/yyyy format.
   ms.assetid: daaf6b61-5953-4c2d-b6b8-7c885b552646
   ms.localizationpriority: medium
+  ms.prod: windows-server
 
 # linkListType: architecture | concept | deploy | download | get-started | how-to-guide | learn | overview | quickstart | reference | sample | tutorial | video | whats-new
 
