--- a/WindowsServerDocs/remote/remote-desktop-services/clients/remote-desktop-client-faq.yml
+++ b/WindowsServerDocs/remote/remote-desktop-services/clients/remote-desktop-client-faq.yml
@@ -9,6 +9,7 @@ metadata:
   ms.author: elizapo
   ms.date: 07/16/2018
   ms.localizationpriority: medium
+  ms.prod: windows-server
     
 title: Frequently asked questions about the Remote Desktop clients
 summary: |
