--- a/WindowsServerDocs/storage/dfs-replication/dfsr-faq.yml
+++ b/WindowsServerDocs/storage/dfs-replication/dfsr-faq.yml
@@ -7,6 +7,7 @@ metadata:
   manager: elizapo
   ms.author: jgerend
   ms.topic: article
+  ms.prod: windows-server
     
 title: "DFS Replication FAQ"
 summary: |
