--- a/WindowsServerDocs/storage/storage-migration-service/faq.yml
+++ b/WindowsServerDocs/storage/storage-migration-service/faq.yml
@@ -7,6 +7,7 @@ metadata:
   manager: siroy
   ms.date: 01/29/2021
   ms.topic: article
+  ms.prod: windows-server
     
 title: Storage Migration Service frequently asked questions (FAQ)
 summary: |
