--- a/WindowsServerDocs/storage/storage.yml
+++ b/WindowsServerDocs/storage/storage.yml
@@ -10,6 +10,7 @@ metadata:
   author: JasonGerend
   ms.author: jgerend
   ms.date: 07/15/2020 
+  ms.prod: windows-server
 
 # linkListType: architecture | concept | deploy | download | get-started | how-to-guide | learn | overview | quickstart | reference | sample | tutorial | video | whats-new
 
