--- a/WindowsServerDocs/get-started/toc.yml
+++ b/WindowsServerDocs/get-started/toc.yml
@@ -49,8 +49,28 @@ items:
       items:
         - name: Server Core App Compatibility Feature on Demand
           href: server-core-app-compatibility-feature-on-demand.md
-        - name: Automatic VM activation
-          href: automatic-vm-activation.md
+        - name: Activation
+          items:
+            - name: Automatic VM Activation
+              href: automatic-vm-activation.md
+            - name: KMS activation planning
+              href: kms-activation-planning.md
+            - name: KMS client activation keys
+              href: kms-client-activation-keys.md
+        - name: Microsoft Server application compatibility
+          items:
+          - name: Windows Server 2019
+            href: application-compatibility-windows-server-2019.md
+          - name: Windows Server 2016
+            href: application-compatibility-windows-server-2016.md
+        - name: Migration of Windows Server Roles and Features
+          href: Migrate-Roles-and-Features.md
+        - name: Upgrade and Conversion Options for Windows Server 2016
+          href: Supported-Upgrade-paths.md
+        - name: Windows Server 2016 Role Upgrade and Migration
+          href: Server-Role-Upgradeability-Table.md
+        - name: Azure Hybrid Benefit for Windows Server
+          href: azure-hybrid-benefit.md
     - name: How-to guides
       items:
         - name: Install, upgrade, or migrate
@@ -62,46 +82,6 @@ items:
             href: Getting-started-with-Server-with-Desktop-Experience.md
         - name: Get Extended Security Updates
           href: extended-security-updates-deploy.md
-    - name: Migration of Windows Server Roles and Features
-      href: Migrate-Roles-and-Features.md
-    - name: Recommendations for moving to Windows Server 2016
-      href: Recommendations-moving-to-Server2016.md
-    - name: Upgrade and Conversion Options for Windows Server 2016
-      href: Supported-Upgrade-paths.md
-    - name: Windows Server 2016 Role Upgrade and Migration
-      href: Server-Role-Upgradeability-Table.md
-    - name: Windows Server 2016 Application Compatibility Table
-      href: Server-Application-compatibility.md
-    - name: Azure Hybrid Benefit for Windows Server
-      href: azure-hybrid-benefit.md
-    - name: Windows Server 2016 Activation Guide
-      items: 
-        - name: Windows Server 2016 Activation Guide
-          href: Server-2016-activation.md
-        - name: KMS Client Setup Keys
-          href: KMSclientkeys.md
-    - name: Troubleshooting Windows volume activation
-      items: 
-        - name: Troubleshooting Windows volume activation
-          href: activation-troubleshooting-guide.md
-        - name: Guidelines for troubleshooting KMS
-          href: activation-troubleshoot-kms-general.md
-        - name: Slmgr.vbs options
-          href: activation-slmgr-vbs-options.md
-        - name: Solutions to common activation issues
-          items: 
-            - name: Resolve Windows activation error codes
-              href: activation-error-codes.md
-            - name: "KMS activation: known issues"
-              href: activation-troubleshoot-KMS-issues.md
-            - name: "MAK activation: known issues"
-              href: activation-troubleshoot-MAK-issues.md
-            - name: Guidelines for troubleshooting DNS-related activation issues
-              href: common-troubleshooting-procedures-kms-dns.md
-            - name: Rebuild the Tokens.dat file
-              href: activation-rebuild-tokens-dat-file.md
-        - name: "Example: Troubleshooting ADBA clients that do not activate"
-          href: activation-troubleshoot-adba-clients.md
     - name: Install Nano Server
       href: Getting-started-with-Nano-Server.md
       items: 
@@ -128,11 +108,35 @@ items:
               href: powershell-on-Nano-Server.md
             - name: Developing PowerShell Cmdlets for Nano Server
               href: Developing-powershell-Cmdlets-for-Nano-Server.md
-        - name: Troubleshooting Nano Server
-          href: Troubleshooting-Nano-Server.md
+    - name: Troubleshooting
+      items:
+      - name: Activation
+        items: 
+        - name: Troubleshooting Windows volume activation
+          href: activation-troubleshooting-guide.md
+        - name: Troubleshooting KMS
+          href: activation-troubleshoot-kms-general.md
+        - name: Slmgr.vbs options
+          href: activation-slmgr-vbs-options.md
+        - name: Solutions to common activation issues
+          items: 
+          - name: Resolve Windows activation error codes
+            href: activation-error-codes.md
+          - name: "KMS activation: known issues"
+            href: activation-troubleshoot-KMS-issues.md
+          - name: "MAK activation: known issues"
+            href: activation-troubleshoot-MAK-issues.md
+          - name: Troubleshooting DNS-related activation issues
+            href: common-troubleshooting-procedures-kms-dns.md
+          - name: Rebuild the Tokens.dat file
+            href: activation-rebuild-tokens-dat-file.md
+          - name: "Example: Troubleshooting ADBA clients that do not activate"
+            href: activation-troubleshoot-adba-clients.md
+      - name: Nano Server
+        href: Troubleshooting-Nano-Server.md
     - name: Resources
       items:
-      - name: Windows Server release health
+      - name: Windows release health
         href: https://docs.microsoft.com/windows/release-health/
       - name: Windows Server product page
         href: https://www.microsoft.com/windows-server
