Added new article and updated references in related others

--- a/WindowsServerDocs/get-started/toc.yml
+++ b/WindowsServerDocs/get-started/toc.yml
@@ -55,8 +55,6 @@ items:
               href: automatic-vm-activation.md
             - name: KMS activation planning
               href: kms-activation-planning.md
-            - name: KMS client activation keys
-              href: kms-client-activation-keys.md
         - name: Microsoft Server application compatibility
           items:
           - name: Windows Server 2019
@@ -80,6 +78,12 @@ items:
             href: Getting-started-with-Server-Core.md
           - name: Install Server with Desktop Experience
             href: Getting-started-with-Server-with-Desktop-Experience.md
+        - name: Activation
+          items:
+            - name: Create KMS host
+              href: kms-create-host.md
+            - name: KMS client activation
+              href: kms-client-activation-keys.md
         - name: Get Extended Security Updates
           href: extended-security-updates-deploy.md
     - name: Install Nano Server
