--- a/WindowsServerDocs/identity/ad-fs/overview/AD-FS-FAQ.yml
+++ b/WindowsServerDocs/identity/ad-fs/overview/AD-FS-FAQ.yml
@@ -252,10 +252,10 @@ sections:
           - id_token: same as access token
   
       - question: |
-          Does AD FS support implicit flow for confidential client?
+          Does AD FS support implicit flows for confidential client?
         answer: |
-          AD FS does not support implicit flow for confidential client. Client authentication is only enabled for token endpoint. So if confidential client needs an access token, it will need to use auth code flow.
-  
+          AD FS does not support implicit flows for confidential client. Client authentication is only enabled for token endpoint and ADFS will not issue an access token without client authentication. If confidential client needs an access token and also requires user authentication, it will need to use authorization code flow.
+
       - question: |
           Does AD FS support HTTP Strict Transport Security (HSTS)?
         answer: |
